fixing overflow issue for normal themes

--- a/app/pattern-scss/_action-box.scss
+++ b/app/pattern-scss/_action-box.scss
@@ -10,6 +10,10 @@
 .app-wrap {
   padding-bottom: $page-section-spacing;
   overflow: hidden;
+
+  .widget-proud-actions-app & {
+    overflow: initial;
+  }
 }
 
 .main-311 {
